--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <p>&copy; Copyright 2025. <span>Developer Kamal Hossen.</span> All Rights Reserved.</p>
+    <p>&copy; Copyright <span>2025</span> All Rights Reserved.</p>
   </footer>
 
 </body>
